# javi

./: .env.example  Dockerfile  pyproject.toml
.github/: dependabot.yml  deploy.env.yaml
.github/workflows/: deploy.yaml
common/: phone.py  tests.py  timewindow.py
config/: settings.py  urls.py
deliveries/: admin.py  api.py  api_urls.py  context_processors.py  forms.py  models.py  services.py  test_api.py  test_webhook_profile.py  tests.py  urls.py  views.py
deliveries/migrations/: 0002_delivery.py  0003_delivery_eta_at_delivery_eta_source_and_more.py  0009_apikey_apiidempotencykey.py  0010_shop_webhook_secret_shop_webhook_url.py  0011_alter_delivery_options.py
docs/implementation-artifacts/: 1-1-walking-skeleton.md  1-2-shop-origin.md  1-3-create-delivery.md  2-1-start-eta-notify.md  2-3-viber-sms-fallback.md  2-4-notification-status-resend.md
docs/planning-artifacts/: api-plan.md  architecture.md  epics.md  infobip-key-rotation.md  multichannel-fallback-plan.md  quota-counter-plan.md  use-cases-javi.md
integrations/: base.py  cache.py  chained.py  google_maps.py  infobip.py  metering.py  models.py  providers.py  testing.py  tests.py  usage.py
integrations/migrations/: 0001_initial.py  0003_providerusage.py
landing/: index.html  privacy.html
notifications/: admin.py  models.py  outbound.py  test_outbound.py  test_webhook_events.py  tests.py  urls.py  webhooks.py
notifications/migrations/: 0001_initial.py  0003_notificationattempt_and_more.py
tasks/: scheduler.py  testing.py  tests.py
templates/: base.html
tracking/: tests.py  urls.py  views.py
(+22 files in other folders)
