[project]
name = "javi"
version = "0.1.0"
description = "Delivery notifications for small businesses — Viber/SMS updates, ETA and a tracking link."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<6.1",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.6.1",
    "google-cloud-tasks>=2.22.0",
    "gunicorn>=26.0.0",
    "phonenumbers>=9.0.31",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "tzdata>=2026.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["landing", "migrations", "_bmad", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "-q"
